--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,14 +1,21 @@
-FROM python:3
+FROM python:3.8
 
-ENV PYTHONBUFFERED=1
+ENV PYTHONUNBUFFERED 1
 
+RUN apt-get update && apt-get install -y --no-install-recommends \
+        build-essential \
+        libpq-dev \
+        uwsgi \
+        uwsgi-plugin-python3 \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN mkdir /code
 WORKDIR /code
 
-COPY requirements.txt .
+COPY requirements.txt /code/
+RUN pip install --upgrade pip && pip install -r requirements.txt
 
-RUN pip install -r requirements.txt
+COPY . /code/
 
-COPY . .
 
-EXPOSE 8000
-CMD ["python","manage.py","runserver","0.0.0.0:8000"]
+CMD ["uwsgi", "--ini", "uwsgi.ini"]
