--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,20 @@
-server {
 
-    listen 80;
+    server {
+        listen 80 default_server;
+        listen [::]:80 default_server;
+        server_name 13.232.76.140;
 
-    location / {
-        include uwsgi_params;
-        uwsgi_pass django:8000;
+        root /code;
+
+        location /static/ {
+            alias /code/newapp/;
+        }
+
+        location / {
+            include uwsgi_params;
+            uwsgi_pass unix:/run/uwsgi/webapp.sock;
+        }
     }
-}
+
+
+
