--- a/webapp/uwsgi.ini
+++ b/webapp/uwsgi.ini
@@ -1,10 +1,18 @@
 [uwsgi]
-wsgi-file = /webapp/wsgi.py
-socket = :8000
+http-timeout = 60
+base = /code
+chdir = /code
+wsgi-file = /code/webapp/wsgi.py
+pythonpath = /code
+module = webapp.wsgi:application
+uid = root
+socket = /run/uwsgi/webapp.sock
 processes = 4
 threads = 2
 master = true
-chmod-socket = 660
+chmod-socket = 777
+chown-socket = root:www-data
 vaccum = true
 die-on-term = true
 buffer-size = 32768
+plugins = python
